# personal-project-1

./: .env.example  .gitignore  README.md  pyproject.toml
docs/: GITHUB_SETUP.md  HANDOFF.md  TASKS.md  TELEGRAM_SMOKE_TEST.md  WINDOWS_STARTUP.md
docs/superpowers/plans/: 2026-06-16-soop-telegram-clip-downloader-implementation.md
docs/superpowers/specs/: 2026-06-16-soop-telegram-clip-downloader-design.md
scripts/: enable-wsl-for-docker.ps1  run-service.ps1  start-telegram-local-api.ps1  status-telegram-local-api.ps1  stop-telegram-local-api.ps1
soop_clip_downloader/: __init__.py  __main__.py  app.py  config.py  delivery.py  downloader.py  jobs.py  runtime.py  service.py  single_instance.py  telegram_api.py  telegram_delivery.py  url_tools.py
tests/: test_app.py  test_bot_manager.py  test_bot_manager_gui.py  test_config.py  test_delivery.py  test_downloader.py  test_jobs.py  test_run_service_script.py  test_runtime.py  test_service.py  test_single_instance.py  test_telegram_api.py  test_telegram_delivery.py  test_telegram_local_api_scripts.py  test_url_tools.py
tools/: bot-manager-gui.ps1  bot_manager_gui.py  bots.json  bots.ps1  create-bot-manager-shortcut.ps1
